--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@
                 </div>
             </div>
         </div>
+        <div class="team-member">
+            <div class="container">
+                <div class="team-member-flex">
+                    <div class="left-side-img-container">
+                        <div class="team-member-heading">
+                            <p>OUR TEAM</p>
+                            <h2>Meet our</h2>
+                            <h2>team members</h2>
+                        </div>
+                    </div>
+                    <div class="right-side-img-container"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
