--- a/index.html
+++ b/index.html
@@ -225,12 +225,140 @@
                 <div class="team-member-flex">
                     <div class="left-side-img-container">
                         <div class="team-member-heading">
-                            <p>OUR TEAM</p>
+                            <p>
+                                <span>O</span>
+                                <span>U</span>
+                                <span>R</span>
+                                <span>&nbsp;</span>
+                                <span>T</span>
+                                <span>E</span>
+                                <span>A</span>
+                                <span>M</span>
+                            </p>
                             <h2>Meet our</h2>
                             <h2>team members</h2>
                         </div>
+                        <div class="team-member-1">
+                            <img src="./villa/box-dina-img-01.jpg" />
+                            <div class="designation">
+                                <h3>Steven Hodges</h3>
+                                <p>
+                                    <span>F</span>
+                                    <span>O</span>
+                                    <span>U</span>
+                                    <span>N</span>
+                                    <span>D</span>
+                                    <span>E</span>
+                                    <span>R</span>
+                                    <span>&nbsp;</span>
+                                    <span>/</span>
+                                    <span>&nbsp;</span>
+                                    <span>A</span>
+                                    <span>R</span>
+                                    <span>C</span>
+                                    <span>H</span>
+                                    <span>I</span>
+                                    <span>T</span>
+                                    <span>E</span>
+                                    <span>C</span>
+                                    <span>T</span></p>
+                            </div>
+                        </div>
+                        <div class="team-member-1">
+                            <img src="./villa/box-dina-img-01.jpg" />
+                            <div class="designation">
+                                <h3>Steven Hodges</h3>
+                                <p>
+                                    <span>F</span>
+                                    <span>O</span>
+                                    <span>U</span>
+                                    <span>N</span>
+                                    <span>D</span>
+                                    <span>E</span>
+                                    <span>R</span>
+                                    <span>&nbsp;</span>
+                                    <span>/</span>
+                                    <span>&nbsp;</span>
+                                    <span>A</span>
+                                    <span>R</span>
+                                    <span>C</span>
+                                    <span>H</span>
+                                    <span>I</span>
+                                    <span>T</span>
+                                    <span>E</span>
+                                    <span>C</span>
+                                    <span>T</span></p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="right-side-img-container"></div>
+                     <div class="right-side-img-container">
+                        <!-- <div class="team-member-heading">
+                            <p>
+                                <span>O</span>
+                                <span>U</span>
+                                <span>R</span>
+                                <span>&nbsp;</span>
+                                <span>T</span>
+                                <span>E</span>
+                                <span>A</span>
+                                <span>M</span>
+                            </p>
+                            <h2>Meet our</h2>
+                            <h2>team members</h2>
+                        </div> -->
+                        <div class="team-member-2">
+                            <img src="./villa/box-dina-img-01.jpg" />
+                            <div class="designation">
+                                <h3>Steven Hodges</h3>
+                                <p>
+                                    <span>F</span>
+                                    <span>O</span>
+                                    <span>U</span>
+                                    <span>N</span>
+                                    <span>D</span>
+                                    <span>E</span>
+                                    <span>R</span>
+                                    <span>&nbsp;</span>
+                                    <span>/</span>
+                                    <span>&nbsp;</span>
+                                    <span>A</span>
+                                    <span>R</span>
+                                    <span>C</span>
+                                    <span>H</span>
+                                    <span>I</span>
+                                    <span>T</span>
+                                    <span>E</span>
+                                    <span>C</span>
+                                    <span>T</span></p>
+                            </div>
+                        </div>
+                        <div class="team-member-2">
+                            <img src="./villa/box-dina-img-01.jpg" />
+                            <div class="designation">
+                                <h3>Steven Hodges</h3>
+                                <p>
+                                    <span>F</span>
+                                    <span>O</span>
+                                    <span>U</span>
+                                    <span>N</span>
+                                    <span>D</span>
+                                    <span>E</span>
+                                    <span>R</span>
+                                    <span>&nbsp;</span>
+                                    <span>/</span>
+                                    <span>&nbsp;</span>
+                                    <span>A</span>
+                                    <span>R</span>
+                                    <span>C</span>
+                                    <span>H</span>
+                                    <span>I</span>
+                                    <span>T</span>
+                                    <span>E</span>
+                                    <span>C</span>
+                                    <span>T</span></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
