--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <div class="container">
+            <div class="container2">
                 <div class="nav-bar-items">
                     <div class="nav-logo">
                         <a href="#">
@@ -107,24 +107,34 @@
                 </div>
             </div>
             <div class="bg-img-2">
-                <img src="./villa/Assets/Six.jpg" id="hero-img" />
-                <div class="bg-img-3">
-                    <img src="./villa/Assets/three.jpg" id="hero-img-2" />
-                </div>
-                <div class="body-text-content">
-                    <p>Milan,Italy</p>
-                    <h1>Villa Echo</h1>
-                    <h2>LARGE 3 - BEDROOM HOLIDAY
-                        VILLA</h2>
-                    <a href="#">
-                        View Project
-                        <i class="fa-solid fa-chevron-right" id="right-arrow"></i>
-                    </a>
-
+                <div class="hero-text-image-flex">
+                    <div class="bg-img-3">
+                        <img src="./villa/tool.jpg" id="hero-img-2" />
+                    </div>
+                    <div class="body-text-content">
+                        <p>Milan,Italy</p>
+                        <h1>Villa Echo</h1>
+                        <h2>LARGE 3 - BEDROOM HOLIDAY
+                            VILLA</h2>
+                        <a href="#">
+                            View Project
+                            <i class="fa-solid fa-chevron-right" id="right-arrow"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-
+        <div class="years-of-success">
+            <h2 class="about-us">
+                <span>A</span>
+                <span>B</span>
+                <span>O</span>
+                <span>U</span>
+                <span>T</span>
+                <span>U</span>
+                <span>S</span>
+            </h2>
+        </div>
         <div class="services">
             <div class="container">
                 <div class="mentioned-services">
@@ -137,8 +147,10 @@
                             <div class="text-side-para-1">
                                 <p>
                                     The first thing we do is meeting with our clients and talk through their goals on a
-                                    future project. During this meeting, feel free to communicate your ideas and ask lots of
-                                    questions. This stage is highly decisive as you can evaluate the work of your potential
+                                    future project. During this meeting, feel free to communicate your ideas and ask
+                                    lots of
+                                    questions. This stage is highly decisive as you can evaluate the work of your
+                                    potential
                                     architect by browsing their portfolio.
                                 </p>
                             </div>
@@ -146,7 +158,7 @@
                                 <p>
                                     We focus on the problem, the question and the solution. And we always think ahead.
                                 </p>
-                                </div>
+                            </div>
                         </div>
                         <div class="construction-left-container">
                             <div class="construction-services1">
@@ -261,7 +273,8 @@
                                     <span>T</span>
                                     <span>E</span>
                                     <span>C</span>
-                                    <span>T</span></p>
+                                    <span>T</span>
+                                </p>
                             </div>
                         </div>
                         <div class="team-member-1">
@@ -287,11 +300,12 @@
                                     <span>T</span>
                                     <span>E</span>
                                     <span>C</span>
-                                    <span>T</span></p>
+                                    <span>T</span>
+                                </p>
                             </div>
                         </div>
                     </div>
-                     <div class="right-side-img-container">
+                    <div class="right-side-img-container">
                         <!-- <div class="team-member-heading">
                             <p>
                                 <span>O</span>
@@ -329,7 +343,8 @@
                                     <span>T</span>
                                     <span>E</span>
                                     <span>C</span>
-                                    <span>T</span></p>
+                                    <span>T</span>
+                                </p>
                             </div>
                         </div>
                         <div class="team-member-2">
@@ -355,7 +370,8 @@
                                     <span>T</span>
                                     <span>E</span>
                                     <span>C</span>
-                                    <span>T</span></p>
+                                    <span>T</span>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -365,57 +381,146 @@
     </main>
 
     <footer>
-        <div class="footer-container">
-            <div class="container">
-            <div class="footer-flex-container">
-
+        <!-- <div class="footer-container">
+            <div class="back-drop-side">
+                <div class="footer-flex-container">
+                    
                     <div class="left-side">
                         <div class="backdrop">
-                            <h2 class="footer-backdrop">
-                                C !tyscape
-                            </h2>
-
-                            <h3 class="contact-box-heading">
-                                Contacts
-                            </h3>
-                            <div class="footer-contacts">
-                                <div class="contact-box">
-                                    <!-- <h3 class="contact-box-heading">
-                                    Contacts
-                                </h3> -->
-                                    <p class="contact-box-para">929 Plymouth Ave.
-                                        New York, NY 10011</p>
-
-                                    <p class="contact-box-para2">1-300-123-1234</p>
-                                    <p class="contact-box-para3"><a
-                                            href="mailto:example@example.com">example@example.com</a></p>
+                            <div class="footer-backdrop">
+                                    <span>C</span>
+                                    <span>&nbsp;</span>
+                                    <span class="rotate">i</span>
+                                    <span>t</span>
+                                    <span>y</span>
+                                    <span>s</span>
+                                    <span>c</span>
+                                    <span>a</span>
+                                    <span>p</span>
+                                    <span>e</span>
                                 </div>
-                                <div class="email-box">
-                                    <p class="email-box-para">Sign up to our newsletter and be the first to know about
-                                        the
-                                        latest news, special offers, events, and discounts.</p>
+                                <div class="container">
+                                    <div class="footer-contacts">
+                                    <!-- <h3 class="contact-box-heading">
+                                        Contacts
+                                    </h3> -->
+        <!-- <div class="contact-box">
+                                        <h3 class="contact-box-heading">
+                                    Contacts
+                                </h3>
+                                        <p class="contact-box-para">929 Plymouth Ave.
+                                            New York, NY 10011</p>
 
-                                    <form>
-                                        <div class="form-wrap">
-                                            <input type="email" placeholder="E-mail" />
-                                        </div>
-                                        <!-- <span class="form-line"></span> -->
-                                        <button type="submit" id="subscribe-btn">Subscribe</button>
-                                    </form>
+                                        <p class="contact-box-para2">1-300-123-1234</p>
+                                        <p class="contact-box-para3"><a
+                                                href="mailto:example@example.com">example@example.com</a></p>
+                                    </div>
+                                    <div class="email-box">
+                                        <p class="email-box-para">Sign up to our newsletter and be the first to know
+                                            about
+                                            the
+                                            latest news, special offers, events, and discounts.</p>
 
+                                        <form>
+                                            <div class="form-wrap">
+                                                <input type="email" placeholder="E-mail" />
+                                            </div> -->
+        <!-- <span class="form-line"></span> -->
+        <!-- <button type="submit" id="subscribe-btn">Subscribe</button>
+                                        </form>
 
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="map-side">
-                        <iframe width="100%" height="100%"
-                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe>
-                        
+                </div>
+            </div> -->
+        <!-- <div class="map-side">
+                <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                        href="https://www.gps.ie/">gps devices</a></iframe>
+            </div> -->
+
+        <!-- </div> -->
+
+
+
+        <div class="f-container">
+            <div class="left-container">
+                <h2 class="f-b-heading">
+                    <span>C</span>
+                    <!-- <span>&nbsp;</span> -->
+                    <span class="rotate">i</span>
+                    <span>t</span>
+                    <span>y</span>
+                    <span>s</span>
+                    <span>c</span>
+                    <span>a</span>
+                    <span>p</span>
+                    <span>e</span>
+                </h2>
+                <div class="container">
+                    <h3 class="contact-box-heading">
+                        Contacts
+                    </h3>
+                    <div class="footer-contacts">
+                        <div class="contact-box">
+                            <p class="contact-box-para">929 Plymouth Ave.
+                                New York, NY 10011</p>
+
+                            <p class="contact-box-para2">1-300-123-1234</p>
+                            <p class="contact-box-para3"><a href="mailto:example@example.com">example@example.com</a>
+                            </p>
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <p class="copyright">©  2024 cityscape. All rights reserved.</p>
+                        </div>
+                        <div class="email-box">
+                            <p class="email-box-para">Sign up to our newsletter and be the first to know
+                                about
+                                the
+                                latest news, special offers, events, and discounts.</p>
+                            <form>
+                                <div class="form-wrap">
+                                    <input type="email" placeholder="E-mail" />
+                                </div>
+                                <span class="form-line"></span>
+                                <button type="submit" id="subscribe-btn">Subscribe</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                <div class="map-container">
+                    <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                        src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                            href="https://www.gps.ie/">gps devices</a></iframe>
+                </div>
             </div>
-        </div>
+
+
+
+
+
+
+
+
+
     </footer>
 </body>
 
